# MyRobot-Simulator

./: .gitignore  319125134_204666085.rar  CMakeLists.txt  Known Issues Ex3- _319125134_204666085.xlsx  readme.MD
Algo_123456789/: CMakeLists.txt  algorithm.cpp
Algo_123456789/include/: algorithm.h
Algo_204666085/: CMakeLists.txt  algorithm.cpp  inner_map.cpp
Algo_204666085/include/: algorithm.h
Algo_319125134/: CMakeLists.txt  algorithm.cpp  inner_map.cpp
Algo_319125134/include/: algorithm.h
algorithm/: CMakeLists.txt  algorithm.cpp  inner_map.cpp
algorithm_another/: CMakeLists.txt  algorithm.cpp  inner_map.cpp
algorithm_another/include/: algorithm.h
algorithm_bfs/: CMakeLists.txt
algorithm_bfs/include/: AlgorithmRegistration.h  algorithm.h
common/: AlgorithmRegistrar.h  custom_exception.h  map_utility.h
myrobot/: CMakeLists.txt  house.cpp  main.cpp  my_dirt_sensor.cpp  my_wall_sensor.cpp  simulator.cpp  simulator_data.cpp  simulator_manager.cpp  simulator_thread.cpp
myrobot/include/: house.h  my_battery_meter.h  simulator.h  simulator_data.h  simulator_manager.h
simulator/: CMakeLists.txt  house.cpp  main.cpp  simulator.cpp  simulator_data.cpp
simulator/include/: house.h  my_dirt_sensor.h  my_wall_sensor.h  simulator.h  simulator_data.h
simulator_project/: CMakeLists.txt
simulator_project/include/: house.h  simulator.h  simulator_data.h
simulator_project/src/: helloworld.cpp  main.cpp  my_battery_meter.cpp  simulator.cpp  simulator_data.cpp
